--- a/public/index.html
+++ b/public/index.html
@@ -135,6 +135,31 @@
      <!-- Compiled and minified JavaScript -->
      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
+     <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyADY8r04F8_KaEdvaUbX3Xe2zsHRB-Qc-A",
+    authDomain: "stuwie-dash.firebaseapp.com",
+    databaseURL: "https://stuwie-dash.firebaseio.com",
+    projectId: "stuwie-dash",
+    storageBucket: "stuwie-dash.appspot.com",
+    messagingSenderId: "358885580460",
+    appId: "1:358885580460:web:19f2d0050b3fca63e48909",
+    measurementId: "G-X4WMRDD007"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
+
 <div id="root"></div>
 </body>
 
