--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
       <div id="root"></div>
     </main>
     <footer class="footer">
-      All right reserved.
+      All rights reserved.
     </footer>
   </div>
        <!-- Compiled and minified JavaScript -->
