--- a/public/index.html
+++ b/public/index.html
@@ -48,15 +48,15 @@
           <li>
             <img src="https://images.unsplash.com/photo-1456086272160-b28b0645b729?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=889&q=80">
             <div class="caption left-align">
-              <h3>Art And Craft</h3>
+              <h3>Art And Qraft</h3>
               <h5 class="light grey-text text-lighten-3">By Qraft Design</h5> 
             </div>
           </li>
           <li>
-            <img src="https://images.unsplash.com/photo-1585144374720-64d181405b1c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=686&q=80">
+            <img src="images/drew.JPG">
             <div class="caption left-align">
-              <h3>Apparel</h3>
-              <h5 class="light grey-text text-lighten-3">By Qraft Dressline</h5> 
+              <h3>One Stop Shop</h3>
+              <h5 class="light grey-text text-lighten-3">Drawings, Paintings, Ceramics, Textiles</h5> 
             </div>
           </li>
       </ul>
