--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,10 @@
         <a href="index.html">Qraft Store</a>
       </div>
       <div class="header-links">
-        <a href="index.html">Crafts</a>
-        <a href="hindex.html">Apparel</a>
+        <a href="#">Drawings</a>
+        <a href="#">Paintings</a>
+        <a href="#">Ceramics</a>
+        <a href="#">Textiles</a>
       </div>
     </header>
     <aside class="sidebar">
@@ -31,11 +33,17 @@
       <button class="sidebar-close-button" onclick="closeMenu()">x</button>
       <ul>
         <li>
-          <a href="#">Crafts</a>
+          <a href="#">Drawings</a>
         </li>
 
         <li>
-          <a href="#">Apparel</a>
+          <a href="#">Paintings</a>
+        </li>
+        <li>
+          <a href="#">Ceramics</a>
+        </li>
+        <li>
+          <a href="#">Textiles</a>
         </li>
 
       </ul>
