--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     <div class="slider">
         <ul class="slides"> 
           <li>
-            <img src="https://images.unsplash.com/photo-1456086272160-b28b0645b729?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=889&q=80">
+            <img src="images/gor.JPG">
             <div class="caption left-align">
               <h3>Art And Qraft</h3>
               <h5 class="light grey-text text-lighten-3">By Qraft Design</h5> 
