--- a/public/index.html
+++ b/public/index.html
@@ -16,16 +16,16 @@
 
     <header class="header">
       <div class="brand">
-        <button onclick="openMenu()">
+        <!-- <button onclick="openMenu()">
           &#9776;
-        </button>
+        </button> -->
         <a href="index.html">Qraft Store</a>
       </div>
       <div class="header-links">
        
       </div>
     </header>
-    <aside class="sidebar">
+    <!-- <aside class="sidebar">
       <h3>Shopping Categories</h3>
       <button class="sidebar-close-button" onclick="closeMenu()">x</button>
       <ul>
@@ -44,7 +44,7 @@
         </li>
 
       </ul>
-    </aside>
+    </aside> -->
     <main class="main">
 
     
@@ -53,7 +53,7 @@
           <li>
             <img src="images/gor.JPG">
             <div class="caption left-align">
-              <h3>Art And Qraft</h3>
+              <h3>Art And Craft</h3>
               <h5 class="light grey-text text-lighten-3">By Qraft Design</h5> 
             </div>
           </li>
