--- a/public/index.html
+++ b/public/index.html
@@ -54,14 +54,14 @@
             <img src="images/gor.JPG">
             <div class="caption left-align">
               <h3>Art And Craft</h3>
-              <h5 class="light grey-text text-lighten-3">By Qraft Design</h5> 
+              <h5 class="light grey-text text-lighten-3">From Qraft Design Team</h5> 
             </div>
           </li>
           <li>
             <img src="images/drew.JPG">
             <div class="caption left-align">
-              <h3>One Stop Shop</h3>
-              <h5 class="light grey-text text-lighten-3">Drawings, Paintings, Ceramics, Textiles</h5> 
+              <h3>One Stop Store</h3>
+              <h5 class="light grey-text text-lighten-3">Visual Arts</h5> 
             </div>
           </li>
       </ul>
