--- a/public/index.html
+++ b/public/index.html
@@ -51,14 +51,14 @@
     <div class="slider">
         <ul class="slides"> 
           <li>
-            <img src="images/gor.JPG">
+            <img src="images/new.jpg">
             <div class="caption left-align">
               <h3>Art And Craft</h3>
               <h5 class="light grey-text text-lighten-3">From Qraft Design Team</h5> 
             </div>
           </li>
           <li>
-            <img src="images/drew.JPG">
+            <img src="images/news.jpg">
             <div class="caption left-align">
               <h3>One Stop Store</h3>
               <h5 class="light grey-text text-lighten-3">Visual Arts</h5> 
@@ -67,14 +67,15 @@
       </ul>
     </div>
     
-      <div class="content">
-        <div id="my-categories-37342039"></div>
+      <div class="content center">
+        <div class="center" id="my-categories-37342039"></div>
         <div>
         <script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?37342039&data_platform=code&data_date=2020-11-01" charset="utf-8"></script>
         <script type="text/javascript"> xCategoriesV2("id=my-categories-37342039"); </script>
+        <div class="ec-cart-widget"></div>
         </div>
   
-        <div class="ec-cart-widget"></div>
+       
   <div>
   <script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?37342039&data_platform=code&data_date=2020-11-01" charset="utf-8"></script>
   <script type="text/javascript">Ecwid.init();</script>
