--- a/public/index.html
+++ b/public/index.html
@@ -51,14 +51,14 @@
     <div class="slider">
         <ul class="slides"> 
           <li>
-            <img src="images/new.jpg">
+            <img src="https://res.cloudinary.com/dwa3soopc/image/upload/v1607097109/JOE_7133_copy_xey2wa.jpg">
             <div class="caption left-align">
               <h3>Art And Craft</h3>
               <h5 class="light grey-text text-lighten-3">From Qraft Design Team</h5> 
             </div>
           </li>
           <li>
-            <img src="images/news.jpg">
+            <img src="https://res.cloudinary.com/dwa3soopc/image/upload/v1607097113/JOE_7128_copy_xmx6bu.jpg">
             <div class="caption left-align">
               <h3>One Stop Store</h3>
               <h5 class="light grey-text text-lighten-3">Visual Arts</h5> 
